--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
 		"test:watch": "jest --watch"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.2.2",
 		"next": "14.1.3",
+		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
